--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ aiohttp==2.2.5
 async-timeout==2.0.1
 chardet==3.0.4
 discord.py==1.0.0a1452+gf176309
+emoji==0.5.0
 idna==2.6
 multidict==4.1.0
 websockets==3.4
