--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "core"]
 	path = core
-	url = https://github.com/pandaxtc/ayano-core
+	url = git@panda-github.com:pandaxtc/ayano-core.git
