--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,4 @@
 [submodule "core"]
 	path = core
-	url = git@panda-github.com:pandaxtc/ayano-core.git
+	url = https://github.com/pandaxtc/ayano-core.git
+	
