--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,2 @@
-aiofiles==0.3.2
-aiohttp==2.2.5
-async-timeout==2.0.1
-chardet==3.0.4
-discord.py==1.0.0a1452+gf176309
+-e git://github.com/Rapptz/discord.py.git@rewrite#egg=discord.py
 emoji==0.5.0
-idna==2.6
-multidict==4.1.0
-websockets==3.4
-yarl==1.1.1
