--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "rmdir bin/ && tsc src/index.js"
   },
   "author": "",
   "license": "ISC",
@@ -12,12 +12,16 @@
     "discord.js": "^11.4.2",
     "dotenv": "^6.1.0",
     "minimist": "^1.2.0",
+    "pg": "^7.6.1",
+    "reflect-metadata": "^0.1.12",
+    "typeorm": "^0.2.8",
     "typescript": "^3.1.4"
   },
   "devDependencies": {
     "@types/dotenv": "^4.0.3",
     "@types/minimist": "^1.2.0",
     "@types/node": "^10.12.2",
+    "@types/pg": "^7.4.11",
     "tslint": "^5.11.0",
     "tslint-config-standard": "^8.0.1"
   },
